--- a/games/4/player1/index.html
+++ b/games/4/player1/index.html
@@ -23,6 +23,9 @@
   .enemy.hit {
     background-image: url('media/2.gif');
   }
+  .enemy.dead {
+    background-image: url('media/3b.gif');
+  }
   .bullet {
     background-color: #59A3D3;
     box-shadow: 0 0 4px 4px white inset;
