--- a/Colugo/guess_songs/index.html
+++ b/Colugo/guess_songs/index.html
@@ -78,7 +78,7 @@
     <div class="title">Nocturnal Debris</div>
       <div class="container">
         <div class="container">
-          <div style="center; color:green;">double click to reveal song title (you weakling!)</div>
+          <div style="center; color:green;">double click to reveal song title</div>
 <div class="audio-file">
   <div style='font-size: 3.89em'>bdrPFF9gyp</div>
   <audio src="wavs/processed/loop/loop_Radiohead Burn the Witch-0W-yI2oS2hoL0k.wav"></audio>
