--- a/Colugo/guess_songs/index.html
+++ b/Colugo/guess_songs/index.html
@@ -78,6 +78,7 @@
     <div class="title">Nocturnal Debris</div>
       <div class="container">
         <div class="container">
+          <div style="center; padding: 10px;">please wait a few moments for all song links to load</div>
           <div style="center; color:green;">double click to reveal song title</div>
 <div class="audio-file">
   <div style='font-size: 3.89em'>bdrPFF9gyp</div>
