--- a/Colugo/guess_songs/index.html
+++ b/Colugo/guess_songs/index.html
@@ -66,20 +66,151 @@
             left: 50%;
             transform: translate(-50%, -50%);
             padding: 20px;
-            background-color: #333;
+            font-size: 16px;
+            <!-- background-color: #333; -->
             color: #fff;
             border-radius: 5px;
             opacity: 1;
             transition: opacity 1s ease-in-out;
         }
     </style>    
+
+    <script>
+        // Reveal Song Title on double click
+        document.addEventListener('dblclick', function(e) {
+            let target = e.target;
+            if (target.classList.contains('audio-file') || target.parentElement.classList.contains('audio-file')) {
+                const audio = target.querySelector('audio') || target.parentElement.querySelector('audio');
+                if (audio) {
+                    var popup = document.getElementById('popup');
+                    popup.style.opacity = 1;
+                    song_name = audio.src.split('/').pop()
+                    song_name = song_name.slice(0,song_name.indexOf('-')).replace("loop_","")
+                    popup.innerHTML = decodeURI(song_name);
+                    popup.style.display = 'block';
+                    setTimeout(function() {
+                        popup.style.opacity = 0;
+                    }, 1000);
+                }
+            }
+        });
+        // Initialize AudioContext for audio playback
+        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
+        let currentSource = null; // Track currently playing audio source
+
+        // Function to play the audio buffer
+        function playBuffer(audioBuffer, div) {
+            if (currentSource) {
+                currentSource.stop();
+                currentSource.div.classList.remove('bold');
+            }
+
+            const source = audioContext.createBufferSource();
+            source.buffer = audioBuffer;
+            source.connect(audioContext.destination);
+            source.loop = true;
+            source.start(0);
+            source.div = div;
+            currentSource = source;
+            div.classList.add('bold');
+        }
+
+        async function fetchAndDecodeAudio(audioElement) {
+            const response = await fetch(audioElement.src);
+            const arrayBuffer = await response.arrayBuffer();
+            return audioContext.decodeAudioData(arrayBuffer);
+        }
+
+        function handleBackgroundTap() {
+            if (currentSource) {
+                currentSource.stop();
+                currentSource.div.classList.remove('bold');
+                currentSource = null;
+            }
+        }
+
+        function isAudioPlaying() {
+            return currentSource !== null;
+        }
+
+        function downloadAudio(src, filename) {
+            const a = document.createElement('a');
+            a.href = src;
+            a.download = filename;
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        }
+
+        document.addEventListener('contextmenu', function(e) {
+            let target = e.target;
+            if (target.classList.contains('audio-file') || target.parentElement.classList.contains('audio-file')) {
+                const audio = target.querySelector('audio') || target.parentElement.querySelector('audio');
+                if (audio) {
+                    var popup = document.getElementById('popup');
+                    popup.style.opacity = 1;
+                    song_name = audio.src.split('/').pop()
+                    song_name = song_name.slice(0,song_name.indexOf('-')).replace("loop_","")
+                    popup.innerHTML = decodeURI(song_name);
+                    popup.style.display = 'block';
+                    setTimeout(function() {
+                        popup.style.opacity = 0;
+                    }, 1000);
+                    <!-- downloadAudio(audio.src, audio.src.split('/').pop()); -->
+                    e.preventDefault();
+                }
+            }
+        });
+
+        window.onload = async function() {
+            document.body.addEventListener('click', handleBackgroundTap);
+            const audioFiles = document.querySelectorAll('.audio-file');
+
+            for (const div of audioFiles) {
+                const audioElement = div.querySelector('audio');
+                const audioBuffer = await fetchAndDecodeAudio(audioElement);
+
+                div.addEventListener('click', async () => {
+                    if (audioContext.state === 'suspended') {
+                        await audioContext.resume();
+                    }
+                    playBuffer(audioBuffer, div);
+                });
+
+                div.onmouseover = () => {
+                    if (!isAudioPlaying()) {
+                        playBuffer(audioBuffer, div);
+                    }
+                };
+
+                div.onmouseleave = () => {
+                    if (currentSource) {
+                        currentSource.stop();
+                        currentSource.div.classList.remove('bold');
+                        currentSource = null;
+                    }
+                };
+
+                let timer;
+                div.addEventListener('touchstart', function(e) {
+                    timer = setTimeout(function() {
+                        downloadAudio(audioElement.src, audioElement.src.split('/').pop());
+                    }, 2000);
+                });
+
+                div.addEventListener('touchend', function(e) {
+                    clearTimeout(timer);
+                });
+            }
+        };
+    </script>
 </head>
 <body>
     <div class="title">Nocturnal Debris</div>
       <div class="container">
         <div class="container">
           <div style="center; padding: 10px;">please wait a few moments for all song links to load</div>
-          <div style="center; color:green;">double click to reveal song title</div>
+          <div style="center; color:green;">context menu (2 finger trackpad touch or tap) to reveal song title</div>
 <div class="audio-file">
   <div style='font-size: 3.89em'>bdrPFF9gyp</div>
   <audio src="wavs/processed/loop/loop_Radiohead Burn the Witch-0W-yI2oS2hoL0k.wav"></audio>
@@ -507,127 +638,4 @@
     <div id="popup" class="popup">
         think!
     </div>
-    <script>
-        // Reveal Song Title on double click
-        document.addEventListener('dblclick', function(e) {
-            let target = e.target;
-            if (target.classList.contains('audio-file') || target.parentElement.classList.contains('audio-file')) {
-                const audio = target.querySelector('audio') || target.parentElement.querySelector('audio');
-                if (audio) {
-                    var popup = document.getElementById('popup');
-                    popup.style.opacity = 1;
-                    <!-- loop_Radiohead There There-ZS-7AQSLozK7aA.wav -->
-                    song_name = audio.src.split('/').pop()
-                    song_name = song_name.slice(0,song_name.indexOf('-')).replace("loop_","")
-                    popup.innerHTML = decodeURI(song_name);
-                    popup.style.display = 'block';
-                    setTimeout(function() {
-                        popup.style.opacity = 0;
-                    }, 1000);
-                }
-            }
-        });
-        // Initialize AudioContext for audio playback
-        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-        let currentSource = null; // Track currently playing audio source
-
-        // Function to play the audio buffer
-        function playBuffer(audioBuffer, div) {
-            if (currentSource) {
-                currentSource.stop();
-                currentSource.div.classList.remove('bold');
-            }
-
-            const source = audioContext.createBufferSource();
-            source.buffer = audioBuffer;
-            source.connect(audioContext.destination);
-            source.loop = true;
-            source.start(0);
-            source.div = div;
-            currentSource = source;
-            div.classList.add('bold');
-        }
-
-        async function fetchAndDecodeAudio(audioElement) {
-            const response = await fetch(audioElement.src);
-            const arrayBuffer = await response.arrayBuffer();
-            return audioContext.decodeAudioData(arrayBuffer);
-        }
-
-        function handleBackgroundTap() {
-            if (currentSource) {
-                currentSource.stop();
-                currentSource.div.classList.remove('bold');
-                currentSource = null;
-            }
-        }
-
-        function isAudioPlaying() {
-            return currentSource !== null;
-        }
-
-        function downloadAudio(src, filename) {
-            const a = document.createElement('a');
-            a.href = src;
-            a.download = filename;
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-        }
-
-        document.addEventListener('contextmenu', function(e) {
-            let target = e.target;
-            if (target.classList.contains('audio-file') || target.parentElement.classList.contains('audio-file')) {
-                const audio = target.querySelector('audio') || target.parentElement.querySelector('audio');
-                if (audio) {
-                    downloadAudio(audio.src, audio.src.split('/').pop());
-                    e.preventDefault();
-                }
-            }
-        });
-
-        window.onload = async function() {
-            document.body.addEventListener('click', handleBackgroundTap);
-            const audioFiles = document.querySelectorAll('.audio-file');
-
-            for (const div of audioFiles) {
-                const audioElement = div.querySelector('audio');
-                const audioBuffer = await fetchAndDecodeAudio(audioElement);
-
-                div.addEventListener('click', async () => {
-                    if (audioContext.state === 'suspended') {
-                        await audioContext.resume();
-                    }
-                    playBuffer(audioBuffer, div);
-                });
-
-                div.onmouseover = () => {
-                    if (!isAudioPlaying()) {
-                        playBuffer(audioBuffer, div);
-                    }
-                };
-
-                div.onmouseleave = () => {
-                    if (currentSource) {
-                        currentSource.stop();
-                        currentSource.div.classList.remove('bold');
-                        currentSource = null;
-                    }
-                };
-
-                let timer;
-                div.addEventListener('touchstart', function(e) {
-                    timer = setTimeout(function() {
-                        downloadAudio(audioElement.src, audioElement.src.split('/').pop());
-                    }, 2000);
-                });
-
-                div.addEventListener('touchend', function(e) {
-                    clearTimeout(timer);
-                });
-            }
-        };
-    </script> 
-
-
 </body></html>
