--- a/Colugo/guess_songs/head.html
+++ b/Colugo/guess_songs/head.html
@@ -161,6 +161,7 @@
     <div id="score-board" class="score-board"><span class="score">000</span> / <span class="guesses">000</span></div>
     <!-- <br/> -->
     <div class="title">Nocturnal Debris</div>
+    <div>Radhiohead edition</div>
     <br/>
     <div class="container">
       <!-- <div style="center; padding: 10px;">wait a few moments for all song links to load</div> -->
