--- a/games/5/player1/index.html
+++ b/games/5/player1/index.html
@@ -12,24 +12,27 @@
   body {
     font-family: 'Roboto', sans-serif;
   }
+  .game {
+    background-image: url('media/bg_3.png');
+    background-position: right top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .player1 {
     position: relative;
     overflow: hidden;
     border-radius: 50%;
     box-shadow: 2px 2px 10px 2px rgba(0,0,0,1);
     top: calc(50% - 48px);
-    <!-- box-shadow: 0 0 2px 2px white inset; -->
   }
   .bullet {
     background-color: #59A3D3;
-    box-shadow: 0 0 4px 4px white inset;
+    #box-shadow: 0 0 4px 4px white inset;
+    box-shadow: 0 0 1px 1px #285340 inset;
   }
   .word-bullet {
     position: absolute;
-    right: 256px;
     white-space: nowrap;
-    <!-- font-size: large; -->
-    <!-- font-style: italic; -->
   }
   .health-bar {
     position: absolute;
@@ -38,11 +41,11 @@
     transform: translateX(-50%);
     width: 300px;
     height: 20px;
-    background-color: #e5e7eb;
+    background-color: #E5E7EB;
   }
   .health {
     height: 100%;
-    background-color: #ef4444;
+    background-color: #EF4444;
     width: 100%;
   }
   .center-popup {
@@ -60,7 +63,6 @@
   .center-popup p {
       margin-bottom: 10px;
   }
-  /* Optional overlay to cover the background */
   .overlay {
       display: none;
       position: fixed;
@@ -68,29 +70,31 @@
       left: 0;
       width: 100%;
       height: 100%;
-      <!-- background: rgba(0, 0, 0, 0.5); -->
       z-index: 999;
+      #background: rgba(0, 0, 0, 0.5);
   }
-  <!-- .enemy_container { -->
-    <!-- overflow: hidden; -->
-    <!-- top: calc(50% - 128px); -->
-    <!-- width: 256px; -->
-    <!-- height: 256px; -->
-    <!-- border-radius: 10%; -->
-    <!-- background-image: url('media/enemy/assets/4_256.png'); -->
-  <!-- } -->
   .enemy {
     overflow: hidden;
     top: calc(50% - 128px);
-    <!-- background: rgba(0, 0, 0, 0.5); -->
-    <!-- box-shadow: 0 0 8px 8px white inset; -->
+    # TO BRING PLAYER1 AND ENEMY CLOSER AS THEY ARE TOO FAR APART ON WIDE SCREEN;
+    right: 0%;
+    width: 256px;
+    height: 256px;
+    position: absolute;
+    #background: rgba(0, 0, 0, 0.5);
+    #box-shadow: 0 0 8px 8px white inset;
   }
   .enemy video {
-    width: 100%;
-    height: 100%;
+    width: 246px;
+    height: 246px;
+    transform: translate(5px, 5px);
     border-radius: 20%;
     box-shadow: 2px 2px 20px 2px rgba(0,0,0,1);
     object-fit: cover; /* This will handle video aspect ratios */
+    #top: 50%;
+    #left: 50%;
+    #width: 100%;
+    #height: 100%;
   }
   @keyframes shake {
     0% { transform: translate(0px, 0px); }
@@ -107,34 +111,34 @@
 </head>
 <body class="bg-white text-black">
 
-<div id="popup" class="center-popup">
-  <p>
-  move mouse up and down, click to shoot </br>
-  mueve el mouse hacia arriba y hacia abajo, haz clic para disparar
-  </p>
-</div>
-<div class="overlay"></div>
+<!-- <div id="popup" class="center-popup"> -->
+  <!-- <p> -->
+  <!-- move mouse up and down, click to shoot </br> -->
+  <!-- mueve el mouse hacia arriba y hacia abajo, haz clic para disparar -->
+  <!-- </p> -->
+<!-- </div> -->
+<!-- <div class="overlay"></div> -->
 
-<div id="game" class="relative h-screen overflow-hidden">
-  <!-- https://tailwindcss.com/docs/width -->
-  <div id="player1" class="player1 absolute left-0 w-24 h-24 bg-white-500">
-    <video autoplay loop muted playsinline>
-      <source src="media/hero/simon/simon.webm" type="video/webm">
-    </video>
-  </div>
+    <div id="game" class="game relative h-screen overflow-hidden">
+      <!-- https://tailwindcss.com/docs/width -->
+      <div id="player1" class="player1 absolute left-0 w-24 h-24 bg-white-500">
+        <video autoplay loop muted playsinline>
+          <source src="media/hero/simon/simon.webm" type="video/webm">
+        </video>
+      </div>
 
-  <!-- <div id="enemy_container" class="enemy_container absolute right-0 w-64 h-64"> -->
-  <!-- </div> -->
-  <div id="enemy" class="enemy absolute right-0 w-64 h-64">
-    <video autoplay loop muted playsinline>
-      <source src="media/enemy/hippo/head.webm" type="video/webm">
-    </video>
-  </div>
+        <!-- <div id="enemy_container" class="enemy_container absolute right-0 w-64 h-64"> -->
+        <!-- </div> -->
+      <div id="enemy" class="enemy">
+        <video autoplay loop muted playsinline>
+          <source src="media/enemy/hippo/head.webm" type="video/webm">
+        </video>
+      </div>
+      <div class="health-bar">
+        <div class="health" id="health"></div>
+      </div>
+    </div>
 
-  <div class="health-bar">
-    <div class="health" id="health"></div>
-  </div>
-</div>
 
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"
@@ -144,20 +148,6 @@
 <script src="audio.js"></script>
 <script src="javascript/src/utils.js"></script> 
 <script src="javascript/src/game.js"></script> 
-<!-- <script> -->
-  <!-- document.addEventListener('DOMContentLoaded', function() { -->
-    <!-- var popup = document.getElementById('popup'); -->
-    <!-- var overlay = document.querySelector('.overlay'); -->
-
-    <!-- popup.style.display = 'block'; -->
-    <!-- overlay.style.display = 'block'; -->
-
-    <!-- setTimeout(function() { -->
-        <!-- popup.style.display = 'none'; -->
-        <!-- overlay.style.display = 'none'; -->
-    <!-- }, 5000); -->
-  <!-- }); -->
-<!-- </script> -->
 
 </body>
 </html>
