--- a/games/5/player1/index.html
+++ b/games/5/player1/index.html
@@ -43,11 +43,46 @@
     width: 300px;
     height: 20px;
     background-color: #E5E7EB;
+    box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.5);
   }
   .health {
+    width: 100%;
     height: 100%;
     background-color: #EF4444;
-    width: 100%;
+  }
+  .enemy {
+    overflow: hidden;
+    top: calc(50% - 128px);
+    # 20% TO BRING PLAYER1 AND ENEMY CLOSER AS THEY ARE TOO FAR APART ON WIDE SCREEN;
+    right: 0%;
+    width: 256px;
+    height: 256px;
+    position: absolute;
+  }
+  .enemy video {
+    width: 246px;
+    height: 246px;
+    transform: translate(5px, 5px);
+    border-radius: 20%;
+    box-shadow: 2px 2px 20px 2px rgba(239,68,68,1);
+    #box-shadow: 2px 2px 20px 2px rgba(39, 39, 39, 1);
+    #background: rgba(0, 0, 0, 0.5);
+    object-fit: cover; /* This will handle video aspect ratios */
+    #top: 50%;
+    #left: 50%;
+    #width: 100%;
+    #height: 100%;
+  }
+  @keyframes shake {
+    0% { transform: translate(0px, 0px); }
+    25% { transform: translate(-5px, 0px); }
+    50% { transform: translate(5px, 0px); }
+    75% { transform: translate(-5px, 0px); }
+    100% { transform: translate(0px, 0px); }
+  }
+  .shake {
+    animation: shake 0.1s;
+    animation-iteration-count: 1;
   }
   .center-popup {
       display: none;
@@ -73,40 +108,6 @@
       height: 100%;
       z-index: 999;
       #background: rgba(0, 0, 0, 0.5);
-  }
-  .enemy {
-    overflow: hidden;
-    top: calc(50% - 128px);
-    # TO BRING PLAYER1 AND ENEMY CLOSER AS THEY ARE TOO FAR APART ON WIDE SCREEN;
-    right: 0%;
-    width: 256px;
-    height: 256px;
-    position: absolute;
-  }
-  .enemy video {
-    width: 246px;
-    height: 246px;
-    transform: translate(5px, 5px);
-    border-radius: 20%;
-    #box-shadow: 2px 2px 20px 2px rgba(100,100,100,1);
-    box-shadow: 2px 2px 20px 2px rgba(39, 39, 39, 1);
-    #background: rgba(0, 0, 0, 0.5);
-    object-fit: cover; /* This will handle video aspect ratios */
-    #top: 50%;
-    #left: 50%;
-    #width: 100%;
-    #height: 100%;
-  }
-  @keyframes shake {
-    0% { transform: translate(0px, 0px); }
-    25% { transform: translate(-5px, 0px); }
-    50% { transform: translate(5px, 0px); }
-    75% { transform: translate(-5px, 0px); }
-    100% { transform: translate(0px, 0px); }
-  }
-  .shake {
-    animation: shake 0.1s;
-    animation-iteration-count: 1;
   }
 </style>
 </head>
